--- a/Watch App Extension/Info.plist
+++ b/Watch App Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.yasuoza.sandbox.SampleBeziePath.watchkitapp</string>
+			<string>com.yasuoza.sandbox.YOGraphImageKit.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
