--- a/Watch App/Info.plist
+++ b/Watch App/Info.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>SampleBeziePath</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -28,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.yasuoza.sandbox.SampleBeziePath</string>
+	<string>com.yasuoza.sandbox.YOGraphImageKit</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
