Update project structure

--- a/YOGraphImageKit Demo App (watchOS) Extension/Info.plist
+++ b/YOGraphImageKit Demo App (watchOS) Extension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Watch App Extension</string>
+	<string>YOGraphImageKit Demo App (watchOS) Extension</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.yasuoza.sandbox.YOGraphImageKit.watchkitapp</string>
+			<string>com.yasuoza.demo.yographimagekit.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
