--- a/YOChartImageKit.xcodeproj/xcshareddata/xcschemes/YOChartImageKit (watchOS).xcscheme
+++ b/YOChartImageKit.xcodeproj/xcshareddata/xcschemes/YOChartImageKit (watchOS).xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A8154AAF1B2A5917001B3024"
-               BuildableName = "YOGraphImageKit.framework"
-               BlueprintName = "YOGraphImageKit (watchOS)"
-               ReferencedContainer = "container:YOGraphImageKit.xcodeproj">
+               BuildableName = "YOChartImageKit.framework"
+               BlueprintName = "YOChartImageKit (watchOS)"
+               ReferencedContainer = "container:YOChartImageKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -46,9 +46,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A8154AAF1B2A5917001B3024"
-            BuildableName = "YOGraphImageKit.framework"
-            BlueprintName = "YOGraphImageKit (watchOS)"
-            ReferencedContainer = "container:YOGraphImageKit.xcodeproj">
+            BuildableName = "YOChartImageKit.framework"
+            BlueprintName = "YOChartImageKit (watchOS)"
+            ReferencedContainer = "container:YOChartImageKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -64,9 +64,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A8154AAF1B2A5917001B3024"
-            BuildableName = "YOGraphImageKit.framework"
-            BlueprintName = "YOGraphImageKit (watchOS)"
-            ReferencedContainer = "container:YOGraphImageKit.xcodeproj">
+            BuildableName = "YOChartImageKit.framework"
+            BlueprintName = "YOChartImageKit (watchOS)"
+            ReferencedContainer = "container:YOChartImageKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
