--- a/Example/YOGraphImageKit Demo App (watchOS)/Info.plist
+++ b/Example/YOGraphImageKit Demo App (watchOS)/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>YOGraphImageKit Demo</string>
+	<string>YOChartImageKit Demo</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.yasuoza.demo.yographimagekit</string>
+	<string>com.yasuoza.demo.yochartimagekit</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
